Make sure images don't bleed

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -3,6 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+/* Images should never bleed outside of their container. */
+img {
+  max-width: 100%;
+}
+
 #drag-region {
   position: absolute;
   z-index: 9999;
